RISC-V: Select GENERIC_LIB_UMODDI3 on RV32
On 32-bit, it need to use __umoddi3 by some drivers.

Signed-off-by: Zong Li <zong@andestech.com>

--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -111,6 +111,7 @@ config ARCH_RV32I
 	select GENERIC_ASHRDI3
 	select GENERIC_LSHRDI3
 	select GENERIC_UCMPDI2
+	select GENERIC_UMODDI3
 
 config ARCH_RV64I
 	bool "RV64I"
