--- a/arch/riscv/configs/ae350_32_defconfig
+++ b/arch/riscv/configs/ae350_32_defconfig
@@ -1,5 +1,6 @@
 CONFIG_ARCH_RV32I=y
 CONFIG_CMODEL_MEDANY=y
+CONFIG_NDS_V5=y
 CONFIG_PREEMPT=y
 CONFIG_HZ_100=y
 CONFIG_CROSS_COMPILE="riscv64-linux-"
@@ -7,7 +8,6 @@ CONFIG_DEFAULT_HOSTNAME="andes-test"
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
-# CONFIG_CROSS_MEMORY_ATTACH is not set
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
@@ -21,7 +21,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="/NOBACKUP/atcsqa06/zong/kernel/rootfs/rootfs1/disk /NOBACKUP/atcsqa06/zong/kernel/rootfs/rootfs1/disk/dev/initramfs.devnodes"
+CONFIG_INITRAMFS_SOURCE="rootfs-lite initramfs.txt.lite"
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
@@ -73,6 +73,11 @@ CONFIG_DUMMY_CONSOLE_COLUMNS=40
 CONFIG_DUMMY_CONSOLE_ROWS=30
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_LOGO=y
+CONFIG_SOUND=y
+CONFIG_SND=y
+CONFIG_SND_OSSEMUL=y
+CONFIG_SND_PCM_OSS=y
+CONFIG_SND_FTSSP010=y
 # CONFIG_USB_SUPPORT is not set
 CONFIG_MMC=y
 CONFIG_MMC_FTSDC=y
@@ -107,6 +112,7 @@ CONFIG_DEBUG_FS=y
 CONFIG_HEADERS_CHECK=y
 CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_PANIC_ON_OOPS=y
+# CONFIG_DEBUG_PREEMPT is not set
 CONFIG_STACKTRACE=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=300
 # CONFIG_FTRACE is not set
