riscv: dts: Add interrupt-parent for snd node.

--- a/arch/riscv/boot/dts/ae350_32.dts
+++ b/arch/riscv/boot/dts/ae350_32.dts
@@ -143,6 +143,7 @@
     compatible = "andestech,atfac97";
     reg = <0xf0d00000 0x1000>;
     interrupts = <17 4>;
+    interrupt-parent = <&plic0>;
   };
 
   virtio_mmio@fe007000 {
