--- a/arch/riscv/boot/dts/ae350_32.dts
+++ b/arch/riscv/boot/dts/ae350_32.dts
@@ -25,7 +25,9 @@
       reg = <0>;
       status = "okay";
       compatible = "riscv";
-      riscv,isa = "rv32imafdc";
+      riscv,isa = "rv32i2p0m2p0a2p0f2p0d2p0c2p0xv5-0p0";
+      riscv,priv-major = <1>;
+      riscv,priv-minor = <10>;
       mmu-type = "riscv,sv32";
       clock-frequency = <60000000>;
       d-cache-size = <0x8000>;
